samples/_failures_safe/1761249296_5763e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fcad8fe3.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_fcad8fe3.c:174:12: error: missing terminating " character
  174 |     printf("%-12s %-15s
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_fcad8fe3.c:174:5: error: expected expression at end of input
  174 |     printf("%-12s %-15s
      |     ^~~~~~
./samples/SAFE/__tmp_fcad8fe3.c:174:5: error: expected declaration or statement at end of input
